# dem2mesh

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
